--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
@@ -42,7 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Configuration\Constants.cs" />
+    <Compile Include="Configuration\PureConfig.csd.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PureConfig.csd</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\PureConfigHelper.cs" />
+    <Compile Include="Context\CurrentContext.cs" />
+    <Compile Include="Initialization\DefaultContainer.cs" />
+    <Compile Include="Initialization\IContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\CustomSettingsProvider.cs" />
     <Compile Include="Settings\IsolatedStorageSettingsStore.cs" />
@@ -50,7 +60,24 @@
     <Compile Include="Settings\SettingsProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Configuration\PureConfig.csd">
+      <Generator>CsdFileGenerator</Generator>
+      <LastGenOutput>PureConfig.csd.cs</LastGenOutput>
+    </None>
+    <None Include="Configuration\PureConfig.csd.config">
+      <DependentUpon>PureConfig.csd</DependentUpon>
+    </None>
+    <None Include="Configuration\PureConfig.csd.diagram">
+      <DependentUpon>PureConfig.csd</DependentUpon>
+    </None>
+    <None Include="Configuration\PureConfig.csd.xsd">
+      <DependentUpon>PureConfig.csd</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
