--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Context\CurrentContext.cs" />
     <Compile Include="Initialization\DefaultContainer.cs" />
     <Compile Include="Initialization\IContainer.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\CustomSettingsProvider.cs" />
     <Compile Include="Settings\IsolatedStorageSettingsStore.cs" />
@@ -66,6 +67,7 @@
     </None>
     <None Include="Configuration\PureConfig.csd.config">
       <DependentUpon>PureConfig.csd</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Configuration\PureConfig.csd.diagram">
       <DependentUpon>PureConfig.csd</DependentUpon>
