--- a/PureSeeder.Forms/App.config
+++ b/PureSeeder.Forms/App.config
@@ -17,6 +17,7 @@
       <add name="DisplayPlayerCount" value="true"/>
       <add name="EnableLogging" value="false"/>
       <add name="EnableGameHangProtection" value="true"/>
+      <add name="Username" value="gigrada"/>
     </settings>
   </PureConfig>
 </configuration>
