--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -50,12 +50,17 @@
       <DependentUpon>PureConfig.csd</DependentUpon>
     </Compile>
     <Compile Include="Configuration\PureConfigHelper.cs" />
+    <Compile Include="Context\BindableBase.cs" />
+    <Compile Include="Context\BindableSettings.cs" />
     <Compile Include="Context\CurrentContext.cs" />
+    <Compile Include="Context\SessionData.cs" />
     <Compile Include="Initialization\DefaultContainer.cs" />
     <Compile Include="Initialization\IContainer.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\SeederSettings.cs" />
+    <Compile Include="Settings\Server.cs" />
+    <Compile Include="Settings\Servers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
