--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -51,11 +51,13 @@
   <ItemGroup>
     <Compile Include="Configuration\Constants.cs" />
     <Compile Include="Configuration\GameInfo.cs" />
+    <Compile Include="Configuration\ResultReason.cs" />
     <Compile Include="Context\Bf4PlayerCountsUpdater.cs" />
     <Compile Include="Context\BindableBase.cs" />
     <Compile Include="Context\BindableSettings.cs" />
     <Compile Include="Context\CurrentBf4UserUpdater.cs" />
     <Compile Include="Context\CurrentContext.cs" />
+    <Compile Include="Context\IDataContext.cs" />
     <Compile Include="Context\IDataContextUpdater.cs" />
     <Compile Include="Context\PartialObject.cs" />
     <Compile Include="Context\SessionData.cs" />
