AvoidIdleKick working properly now using direct Windows API calls. No longer needed AutoItHelpers so they're removed.

--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Initialization\DefaultContainer.cs" />
     <Compile Include="Initialization\IContainer.cs" />
     <Compile Include="Monitoring\AvoidIdleKick.cs" />
+    <Compile Include="Monitoring\PInvoke.cs" />
     <Compile Include="Monitoring\ProcessMonitor.cs" />
     <Compile Include="PartialObjects\BuildExpressionStack.cs" />
     <Compile Include="Properties\Annotations.cs" />
