--- a/PureSeeder.Forms/PureSeeder.Forms.csproj
+++ b/PureSeeder.Forms/PureSeeder.Forms.csproj
@@ -11,19 +11,24 @@
     <AssemblyName>PureSeeder.Forms</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Brad\Documents\Dev\PureBattlefield\new\temp\deployment\</PublishUrl>
+    <IsWebBootstrapper>true</IsWebBootstrapper>
+    <PublishUrl>C:\Dev\Junk\PureSeeder\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <InstallFrom>Web</InstallFrom>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <InstallUrl>http://bradrhodes.github.io/PureSeeder3/publish.htm/</InstallUrl>
+    <TargetCulture>en</TargetCulture>
+    <ProductName>PURE Seeder 3</ProductName>
+    <PublisherName>PURE Battlefield</PublisherName>
+    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -104,6 +109,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Content Include="DefaultSettings\__defaultSettings.psjson">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\DataSources\Awesomium.Core.IWebView.datasource" />
     <None Include="Properties\DataSources\Awesomium.Windows.Forms.WebControl.datasource" />
     <None Include="Properties\Settings.settings">
@@ -115,33 +123,33 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="xulrunner\dictionaries\en-US.aff">
+    <Content Include="xulrunner\dictionaries\en-US.aff">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\dictionaries\en-US.dic">
+    </Content>
+    <Content Include="xulrunner\dictionaries\en-US.dic">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\freebl3.chk">
+    </Content>
+    <Content Include="xulrunner\freebl3.chk">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\LICENSE">
+    </Content>
+    <Content Include="xulrunner\LICENSE">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\nssdbm3.chk">
+    </Content>
+    <Content Include="xulrunner\nssdbm3.chk">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\omni.ja">
+    </Content>
+    <Content Include="xulrunner\omni.ja">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\precomplete">
+    </Content>
+    <Content Include="xulrunner\precomplete">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\README.xulrunner">
+    </Content>
+    <Content Include="xulrunner\README.xulrunner">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="xulrunner\softokn3.chk">
+    </Content>
+    <Content Include="xulrunner\softokn3.chk">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -175,9 +183,7 @@
     <None Include="Resources\PB.ico" />
     <None Include="Resources\PBOn.ico" />
     <None Include="Resources\PBOff.ico" />
-    <Content Include="AutoItX3.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="PBOBlueTrans.ico" />
     <Content Include="xulrunner\breakpadinjector.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -233,6 +239,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <FileAssociation Include=".psjson">
+      <Visible>False</Visible>
+      <Description>PURE Seeder 3 JSON settings file</Description>
+      <Progid>PureSeeder3</Progid>
+      <DefaultIcon>PBOBlueTrans.ico</DefaultIcon>
+    </FileAssociation>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
