--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Monitoring\GameMinimizer.cs" />
     <Compile Include="Monitoring\PInvoke.cs" />
     <Compile Include="Monitoring\ProcessMonitor.cs" />
+    <Compile Include="Monitoring\RunAction.cs" />
     <Compile Include="PartialObjects\BuildExpressionStack.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
