--- a/PureSeeder.Forms/PureSeeder.Forms.csproj
+++ b/PureSeeder.Forms/PureSeeder.Forms.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -97,6 +98,12 @@
     <Compile Include="MessageBoxEx.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServerEditor.Designer.cs">
+      <DependentUpon>ServerEditor.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -113,6 +120,9 @@
     <Content Include="DefaultSettings\__defaultSettings.psjson">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="ServerEditor.resx">
+      <DependentUpon>ServerEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\DataSources\Awesomium.Core.IWebView.datasource" />
     <None Include="Properties\DataSources\Awesomium.Windows.Forms.WebControl.datasource" />
     <None Include="Properties\Settings.settings">
