Started adding the ability to fetch PlayerStatus, however it doesn't work because using httpClient, the request is not logged in. Will have to use the browser to fetch the needed data because the browser is logged in.

--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Context\CurrentContext.cs" />
     <Compile Include="Context\IDataContext.cs" />
     <Compile Include="Context\IDataContextUpdater.cs" />
+    <Compile Include="Context\IPlayerStatusGetter.cs" />
     <Compile Include="Context\PartialObject.cs" />
+    <Compile Include="Context\PlayerStatus.cs" />
     <Compile Include="Context\ServerStatus.cs" />
     <Compile Include="Context\ServerStatusCollection.cs" />
     <Compile Include="Context\SessionData.cs" />
