--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Context\IPlayerStatusGetter.cs" />
     <Compile Include="Context\PartialObject.cs" />
     <Compile Include="Context\PlayerStatus.cs" />
+    <Compile Include="Context\SeederAction.cs" />
     <Compile Include="Context\ServerStatus.cs" />
     <Compile Include="Context\ServerStatusCollection.cs" />
     <Compile Include="Context\SessionData.cs" />
