Added time component to servers (NOT RUNNABLE YET)
This commit is for safe keeping because I am going to change the
implementation of Times.cs substantially and don't want to lose the
current if the new way fails.

--- a/PureSeeder.Core/PureSeeder.Core.csproj
+++ b/PureSeeder.Core/PureSeeder.Core.csproj
@@ -87,9 +87,13 @@
     <Compile Include="ServerManagement\IUpdateServerIds.cs" />
     <Compile Include="ServerManagement\ServerStatusUpdater.cs" />
     <Compile Include="ServerManagement\UpdateServerIds.cs" />
+    <Compile Include="Settings\EmptyTime.cs" />
+    <Compile Include="Settings\ITimes.cs" />
     <Compile Include="Settings\SeederSettings.cs" />
     <Compile Include="Settings\Server.cs" />
     <Compile Include="Settings\Servers.cs" />
+    <Compile Include="Settings\TimesCollection.cs" />
+    <Compile Include="Settings\Times.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
